<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sailing</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="boat_name">Boat Name</string>
    <string name="sail_no">Sail No</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add_new_boat">Add New Boat</string>
    <string name="add_new_course">Add New Course</string>
    <string name="course_name">Course Name</string>
    <string name="add_new_mark">Add New Mark</string>
    <string name="mark_name">Mark Name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maint_submenu">MaintSubmenu</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="add_performance_data">Add Performance Data</string>
    <string name="true_wind">True Wind</string>
    <string name="tack_angle">Tack Angle</string>
    <string name="gybe_angle">Gybe Angle</string>
    <string name="target_speed_upwind">Target Speed Upwind</string>
    <string name="target_speed_offwind">Target Speed Offwind</string>
    <string name="leeway">Leeway</string>
    <string name="turnaround_time">Turnaround Time</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="select_a_boat">Select a Boat</string>
    <string name="select_a_course">Select a Course</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="check_current">Check Current</string>
    <string name="start_race">Start Race</string>
    <string name="timer">Timer</string>
    <string name="start_north">Start North</string>
    <string name="start_east">Start East</string>
    <string name="start_south">Start South</string>
    <string name="start_west">Start West</string>
    <string name="home">Home</string>
    <string name="left_nav">Left Nav</string>
    <string name="right_nav">Right Nav</string>
    <string name="background_image">Background Image</string>
    <string name="alpha_sub_screen">0.1</string>
    <string name="target_mark_label">Target Mark:</string>
    <string name="next_mark_button">Next Mark</string>
    <string name="prev_mark_button">Prev Mark</string>
    <string name="next_mark">Next Mark:</string>
    <string name="boat_speed">Boat Speed</string>
    <string name="vmg_to_pin_label">VMG to Pin</string>
    <string name="variance_to_pin_label">Variance to Pin</string>
    <string name="placeholder_variance">-</string>
    <string name="bearing_to_pin_label">Bearing to Pin</string>
    <string name="placeholder_degrees">--°</string>
    <string name="cog_label">COG</string>
    <string name="knock_lift_label">Knock/Lift</string>
    <string name="target_boat_speed_upwind">Target Speed Upwind</string>
    <string name="placeholder_speed">-.-- kn</string>
    <string name="target_offwind_speed">Target Speed Offwind</string>
    <string name="fetch_angle_label">Fetch Angle</string>
    <string name="_00_00">00:00</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="_00_30">00:30</string>
    <string name="north_result_not_run">North: Not Run</string>
    <string name="east_result_not_run">East: Not Run</string>
    <string name="south_result_not_run">South: Not Run</string>
    <string name="west_result_not_run">West: Not Run</string>
    <string name="no_course_selected">No course selected</string>
    <string name="not_enough_marks">Not enough marks in course</string>
    <string name="marks_not_found">Marks not found</string>
    <string name="mark_details_not_found">Mark details not found</string>
    <string name="downwind_start_is_unlikely">Downwind start is unlikely</string>
    <string name="port_tack_favoured">Port tack favoured</string>
    <string name="starboard_tack_favoured">Starboard tack favoured</string>
    <string name="line_bias_placeholder">Line Bias: Not Calculated</string>
    <string name="title_activity_right_navigate">RightNavigate</string>
    <string name="title_activity_left_navigate">LeftNavigate</string>
    <string name="leg_fragment">Leg</string>
    <string name="race">Race</string>
    <string name="maintenance">Maintenance</string>
    <string name="analysis">Analysis</string>
    <string name="logo">Logo</string>
    <string name="boat_maintenance">Maintain Boat</string>
    <string name="add_new">Add New</string>
    <string name="course_maintenance">Maintain Course</string>
    <string name="new_course_description">New Course Description</string>
    <string name="existing_courses">Existing Courses</string>
    <string name="mark_maintenance">Maintain Mark</string>
    <string name="maintain_boat_performance">Maintain Boat Performance</string>
    <string name="maintain_individual_boat">Maintain Individual Boat</string>
    <string name="sail_number">Sail Number</string>
    <string name="boat_LOA">LOA</string>
    <string name="PHRF">PHRF</string>
    <string name="make">Make</string>
    <string name="model_name">Model</string>
    <string name="update_boat_details">Update Boat Details</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="inputpolarandturn">Input Polar and Turn</string>
    <string name="maintain_individual_course">Maintain Individual Course</string>
    <string name="course_description">Course Description</string>
    <string name="course_marks">Course Marks</string>
    <string name="all_marks">All Marks</string>
    <string name="delete_this_course">Delete This Course</string>
    <string name="update_completed">Update Completed</string>
    <string name="maintain_individual_mark">Maintain Individual Mark</string>
    <string name="MarkName">Mark Name</string>
    <string name="mark_Latitude">Latitude</string>
    <string name="degrees">Degrees</string>
    <string name="decimal_minutes">Decimal Minutes</string>
    <string name="n_s">N/S</string>
    <string name="e_w">E/W</string>
    <string name="ping_location">Ping Location</string>
    <string name="update_mark_details">Update Mark Details</string>
    <string name="maintain_individual_boat_performance">Maintain Individual Boat Performance</string>
    <string name="target_upwind_speed">Target Upwind Speed</string>
    <string name="turnaroundtime">Turnaround Time</string>
    <string name="update_performance">Update Performance</string>
    <string name="add_new_performance">Add New Performance</string>
    <string name="delete_performance">Delete Performance</string>
    <string name="next_leg_fragment">Next Leg</string>
    <string name="race_setup">Race Setup</string>
    <string name="race_description">Race Description</string>
    <string name="race_date_yyyy_mm_dd">Race Date (YYYY-MM-DD)</string>
    <string name="wind_direction_degrees">Wind Direction (Degrees)</string>
    <string name="true_wind_direction">True Wind Direction</string>
    <string name="wind_strength_knots">Wind Strength (knots)</string>
    <string name="conditions">Conditions</string>
    <string name="pin_lat_long">Pin Lat/Long</string>
    <string name="pin_ping">Pin Ping</string>
    <string name="boat_lat_long">Boat Lat/Long</string>
    <string name="boat_ping">Boat Ping</string>
    <string name="accept_race">Accept Race</string>
    <string name="start_fragment">Start Fragment</string>
    <string name="background_image_desc">Background Image</string>
    <string name="timer_set_5">Set 5 Min</string>
    <string name="timer_set_4">Set 4 Min</string>
    <string name="timer_set_1">Set 1 Min</string>
    <string name="_5_00">5:00</string>
    <string name="reset_timer">Reset</string>
    <string name="turnaround">Turnaround</string>
    <string name="calculate">Calculate</string>
    <string name="Longitude">Longitude</string>
    <string name="start_timer">Start</string>
    <string name="stop_timer">Stop</string>
    <string name="burn_time_information">Burn Time Information</string>
    <string name="speed">Speed</string>
    <string name="_0_0_knots">0.0 knots</string>
    <string name="boat_pin_end">Boat/Pin End</string>
    <string name="port_starboard_tack">Port/Starboard Tack</string>
    <string name="background">Background</string>
    <string name="initvaluestopwatch">00:00</string>
    <string name="WATM_fragment">WATM</string>
    <string name="timer_5_minutes">5 Minutes</string>
    <string name="timer_4_minutes">4 Minutes</string>
    <string name="timer_1_minute">1 Minute</string>
    <string name="min1">1:00</string>
    <string name="min4">4:00</string>
    <string name="min5">5:00</string>
    <string name="min0">0:00</string>
    <string name="backup_all">Backup All</string>
    <string name="restore_all">Restore All</string>
    <string-array name="playback_speeds">
        <item>1x</item>
        <item>2x</item>
        <item>4x</item>
        <item>8x</item>
    </string-array>
</resources>