<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true"

    tools:context=".StopwatchFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside"
        android:src="@drawable/mainlogo"
        android:alpha="@string/alpha_sub_screen"
        android:contentDescription="@string/background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/left_btn"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/left_nav"
            android:src="@drawable/leftarrowclick" />

        <ImageButton
            android:id="@+id/home_btn"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/home"
            android:src="@drawable/home" />

        <ImageButton
            android:id="@+id/right_btn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/right_nav"
            android:src="@drawable/rightarrowclick" />


            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Button
                    android:id="@+id/timer5_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="130dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/timer_5_minutes" />

                <Button
                    android:id="@+id/timer4_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/timer_4_minutes" />

                <Button
                    android:id="@+id/timer1_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/timer_1_minute" />

                <Button
                    android:id="@+id/starttimer_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/start_timer" />

                <Button
                    android:id="@+id/stoptimer_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/stop_timer" />

                <Button
                    android:id="@+id/wat_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/wat" />


                <TextView

                    android:id="@+id/timer_view"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textSize="80sp"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center_horizontal"
                    android:text="5 : 00" />





            </LinearLayout>
    </RelativeLayout>


</FrameLayout>