<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside"
        android:alpha="@string/alpha_sub_screen"
        android:src="@drawable/mainlogoscr"
        android:contentDescription="@string/logo"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/left_btn"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/left_nav"
            android:src="@drawable/leftarrowclick" />

        <ImageButton
            android:id="@+id/home_btn"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/home"
            android:src="@drawable/home_button" />

        <ImageButton
            android:id="@+id/right_btn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/right_nav"
            android:src="@drawable/rightarrowclick" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView


                android:layout_height="match_parent"
                android:layout_width="wrap_content"

                android:layout_marginStart="50dp"
                android:text="@string/start_fragment" />


        </LinearLayout>



    </RelativeLayout>
</FrameLayout>