<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartRaceFragment">

    <ImageView
        android:id="@+id/background_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="@string/alpha_sub_screen"
        android:src="@drawable/mainlogoscr"
        app:layout_constraintBottom_toTopOf="@id/bottom_controlbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/background_image_desc" />

    <RelativeLayout
        android:id="@+id/bottom_controlbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/left_btn"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/left_nav"
            android:src="@drawable/leftarrowclick" />

        <ImageButton
            android:id="@+id/home_btn"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/home"
            android:src="@drawable/home_button"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/right_btn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/right_nav"
            android:src="@drawable/rightarrowclick" />
    </RelativeLayout>

    <com.spinnaker.sailing.GestureConsumingScrollView
        android:id="@+id/start_race_scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_controlbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <!-- Section 1: Countdown Timer -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/countdown_timer_section_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <LinearLayout
                    android:id="@+id/timer_set_buttons_panel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <Button
                        android:id="@+id/button_timer_set5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/timer_set_5" />

                    <Button
                        android:id="@+id/button_timer_set4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/timer_set_4" />

                    <Button
                        android:id="@+id/button_timer_set1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/timer_set_1" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView_countdown_timer_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5_00"
                    android:textColor="@color/red"
                    android:textSize="72sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/timer_set_buttons_panel"
                    app:layout_constraintEnd_toStartOf="@id/countdown_button_panel"/>

                <LinearLayout
                    android:id="@+id/countdown_button_panel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <Button
                        android:id="@+id/button_timer_start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/start_timer" />

                    <Button
                        android:id="@+id/button_timer_stop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stop_timer" />

                    <Button
                        android:id="@+id/button_timer_reset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reset_timer" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Turnaround Time Info -->
            <RelativeLayout
                android:id="@+id/vanderbilt_info_section_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/textView_turnaround_static_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/turnaround"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/textView_turnaround_time_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/_00_00"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/red"
                    android:textSize="44sp" />

                <Button
                    android:id="@+id/button_calculate_turnaround"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/calculate" />
            </RelativeLayout>

            <!-- Burn Time -->
            <RelativeLayout
                android:id="@+id/burn_time_section_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/pale_blue_35_opacity"
                android:padding="4dp">

                <TextView
                    android:id="@+id/textView_burn_time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/burn_time_information"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/textView_burn_time_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView_burn_time_label"
                    android:layout_centerHorizontal="true"
                    android:text="@string/_00_00"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/red"
                    android:textSize="44sp" />
            </RelativeLayout>

            <!-- Speed Display -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/textView_current_speed_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/textView_current_speed_display"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_0_0_knots"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="30sp" />
            </LinearLayout>

            <!-- Boat/Pin Start and Starting Tack Details -->
            <LinearLayout
                android:id="@+id/comments_section_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText_start_end_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:hint="@string/boat_pin_end"
                    android:inputType="text"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/editText_start_tack_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:hint="@string/port_starboard_tack"
                    android:inputType="text"
                    tools:ignore="TouchTargetSizeCheck"
                     />
            </LinearLayout>

        </LinearLayout>
    </com.spinnaker.sailing.GestureConsumingScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>